# issue649

./: foo.py  pyproject.toml
